# ev-final-project

./: .gitignore  CLAUDE.md  Claude-Distilling diffusion models across modalities.md  HANDOFF.md  README.md  environment.yml  history.md  justfile  local_utils.py  notes.md  pyproject.toml
poster/: .gitignore  EV海報參考模板.pptx  build.sh  main.tex  outline.md  refresh.py
reports/: 2026-06-13_f0_loss_design_and_training.md  gauge_math.md
reuse_mpm/: README.md  __init__.py  _entrypoint_demo.py  _env.py  config.py  dataset_gen.py  diff_sim.py  efield.py  forward_gen.py  gen_flow_aligned.py  gpu.py  gradcheck.py  gt_context.py  mpm_rollout.py  multiscene_fwdbwd.py  ply_io.py  probe_identifiability.py  recover.py  recover_v0.py  recovery_sweep.py  run_io.py  sampling.py  scene.py  scene_io.py  scene_physgaussian.py  sim_render.py  train_field_E.py  train_global_E.py  train_v0.py  v0field.py
teacher/: HANDOFF.md  analyze_video.py  build_flow_pack.py  build_video_cache.py  flow_viz.py  gpu_guard.py  measure_hitrate.py  pack_dataset.py  plot_loss.py  probe_direction.py  probe_fit.py  probe_modality.py  probe_signdist.py  run_fit_sweep.sh  run_queue.sh  run_train_seq.sh  sample_ckpt.py  sample_flow_each.py  sample_flow_grid.py  sample_grid_gif.py  train_flow.py  train_image.py  train_local.sh  train_video.py
vsd/: bootstrap.py  build_flow_table.py  check_render.py  check_rollout.py  compare_vx.py  flow_render.py  logp_ode_modal.py  modal_smoke.py  plot_logp.py  probe_magnitude.py  probe_v0_sweep.py  render_fixed.py  render_rgb.py  sample_probe_modal.py  scene_min.py  sds_v0.py  (+4 more)
(+80 files in other folders)
